Fixed an issue with window sizing. Adding the toolbar made it such that the window thought it was too long, added a scrollbar. May have to do some trickery later if it tries to do something screwy when there's actually enough content to need to scroll.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
